# pose-to-image

./: .gitignore  .replit  README.md  app.py  image_generator.py  pose_analysis.py  pose_extractor.py  pyproject.toml
.streamlit/: config.toml
attached_assets/: Pasted--System-Instructions-CRITICAL-This-stick-figure-represents-a--1741832619911.txt  Pasted--coding-utf-8-Stable-Image-API-Public-ipynb-Automatically-generated-by-Colab-Origina-1741834571305.txt  Pasted--title-Define-functions-def-send-generation-request-host-params-files-None--1741834422654.txt  Pasted--use-client-import-useState-from-react-import-fal-from-fal-ai-client-import-Imag-1741834214829.txt  Pasted-Error-processing-image-Failed-to-generate-image-API-request-failed-with-status-code-404-DOCTYPE-1741833267613.txt  Pasted-Error-processing-image-Failed-to-generate-image-API-request-failed-with-status-code-404-DOCTYPE-1741834176159.txt  Pasted-Error-processing-image-Failed-to-generate-image-Could-not-create-Blob-expected-Blob-dict-or-an-I-1741827217350.txt
